test/semantic_errors/invalid_declaration6.mc
void main() {
    int b = a; /* variable 'a' not declared */
    int a;
}